...
                                <connections>
                                    <outlet property="dataSource" destination="gza-o9-9bA" id="dPt-5m-5c0"/>
                                </connections>
                            </tableView>
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Le-Wb-FvH">
                                <rect key="frame" x="129" y="269" width="63" height="30"/>
                                <state key="normal" title="Try again"/>
                                <connections>
                                    <action selector="tryAgainClicked" destination="gza-o9-9bA" eventType="touchUpInside" id="Hsu-7u-RTc"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                <exclude reference="trk-SR-X8u"/>
                                <exclude reference="e3g-wf-alS"/>
                                <exclude reference="fkh-RZ-jNY"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Languages" id="HCk-6x-duK"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                    <connections>
                        <outlet property="languagesTable" destination="jDn-g3-b3A" id="kEG-sa-Mha"/>
                        <outlet property="loadingIndicator" destination="IOW-bw-wLx" id="o0y-Nv-0nr"/>
                        <outlet property="searchBar" destination="AAR-44-pJD" id="nnm-94-zvL"/>
                        <outlet property="tryAgainButton" destination="7Le-Wb-FvH" id="LPz-x9-M2l"/>
...
                                    <mask key="constraints">
                                        <exclude reference="exN-2O-4Vh"/>
                                        <exclude reference="cX2-xz-LnM"/>
                                    </mask>
                                </variation>
                            </view>
                            <searchBar contentMode="redraw" placeholder="Search for a user" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="58a-rn-9kZ" customClass="SearchBar" customModule="GitHubAwards" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="64" width="320" height="44"/>
                                <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="tintColor" red="0.56470588235294117" green="0.56470588235294117" blue="0.58431372549019611" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="barTintColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
                                <scopeButtonTitles>
...
