...
            sendScreenView(screenName)
        }
    }

    static func countrySearched(country: String, forLanguage language: String) {
        callAsync {
            sendEvent("Search", action: "Country<\(country)|\(language)>", label: "\(country)|\(language)")
        }
    }
    
    static func citySearched(city: String, forLanguage language: String) {
        callAsync {
            sendEvent("Search", action: "City<\(city)|\(language)>", label: "\(city)|\(language)")
...
